--- a/public/css/style.css
+++ b/public/css/style.css
@@ -37,5 +37,32 @@ body #map {
   height: 100%;
   color: black;
 }
+body #curiosity {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 9999;
+  transition: all 0.8s;
+  transform: translateY(calc(100% - 60px));
+  width: 400px;
+  height: 400px;
+}
+body #curiosity.show {
+  transform: translateY(0);
+}
+body #curiosity img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+body #curiosity .curiosity-trigger {
+  cursor: pointer;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  background: #0084ff;
+  color: white;
+}
 
 /*# sourceMappingURL=style.css.map */
