--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -42,4 +42,32 @@ body{
         height: 100%;
         color: black;
     }
+
+    #curiosity{
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        z-index: 9999;
+        transition: all .8s;
+        transform: translateY(calc(100% - 60px));
+        width: 400px;
+        height: 400px;
+        &.show{
+            transform: translateY(0);
+        }
+        img{
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+        }
+        .curiosity-trigger{
+            cursor: pointer;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 60px;
+            background: rgb(0, 132, 255);
+            color: white;
+        }
+    }
 }
